# better-process-manager

./: Cargo.toml  shell.nix
example/configs/: 01-simple.json  02-with-env.json  03-healthcheck-tcp.json  04-healthcheck-http.json  05-healthcheck-command.json  06-restart-policy.json  07-scheduled.json  08-full-featured.json  09-multi-app.json  README.md
src/: error.rs  lib.rs  main.rs  main.rs.archieve
src/cli/: cli.rs
src/communication/: client.rs  common.rs  error.rs  mod.rs  server.rs
src/config/: error.rs  mod.rs  read_config.rs  startup.rs  state.rs
src/logging/: mod.rs
src/process_manager/: error.rs  health.rs  mod.rs  process.rs  registry.rs  spawner.rs  watch.rs
tests/: integration_test.rs
