[package]
name = "better-process-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
iceoryx2 = "0.6.1"
once_cell = "1.21.3"
serde = "1.0.219"
serde_json = "1.0.143"
sysinfo = "0.37.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }

iceoryx2-bb-system-types = "0.6.1"
