[package]
name = "bpm"
version = "0.1.0"
edition = "2021"

[lib]
name = "bpm"
path = "src/lib.rs"

[[bin]]
name = "bpm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
iceoryx2 = "0.7.0"
iceoryx2-bb-system-types = "0.7.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sysinfo = "0.37.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }

# New dependencies for PM2 features
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.20"
signal-hook = "0.3"
humantime = "2.1"
nix = { version = "0.30.1", features = ["signal", "process"] }
sha2 = "0.10"
dirs = "6.0"
crossterm = "0.29"
ratatui = "0.29"

[dev-dependencies]
tempfile = "3.14"
